# laoshi

./: .gitignore  .pre-commit-config.yaml  README.md  auth.py  build.sh  build_requirements.txt  collection.anki2  collection.media.db2  package-lock.json  package.json  pyproject.toml
backend/: env.example
backend/app/: main.py  models.py
backend/app/routers/: users.py
backend/tests/: conftest.py  test_main.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
